--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -2,15 +2,41 @@
 	name = <%= print("Your Name: "); STDOUT.flush; STDIN.gets.chomp %>
 	email = <%= print("Your Email: "); STDOUT.flush; STDIN.gets.chomp %>
 [alias]
+	br = branch -a
+        sb = show-branch
+	ci = commit
 	co = checkout
+	ls = ls-files
+	list = ls-files
+	st = status
+        lg = log  --pretty=format:'%Cred%h%Cgreen %ci%Creset %s'
+	diff = diff -w
+	dif = diff
+	pick = cherry-pick
+        headtag = describe --exact-match --tags HEAD
+        update-server = update-server-info
 [color]
+	branch = auto
 	diff = auto
 	status = auto
-	branch = auto
+[color "branch"]
+	current = magenta reverse
+	local = white
+	remote = yellow
+[color "diff"]
+	meta = white reverse
+	frag = magenta
+	old = red
+	new = green
+[color "status"]
+	added = green
+	changed = red
+	untracked = cyan
 [core]
 	excludesfile = <%= ENV['HOME'] %>/.gitignore
-	editor = mate -w
 	autocrlf = input
+[diff]
+	renames = true
 [apply]
 	whitespace = nowarn
 [format]
