Removed -a option from git br alias

--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -2,19 +2,19 @@
 	name = <%= print("Your Name: "); STDOUT.flush; STDIN.gets.chomp %>
 	email = <%= print("Your Email: "); STDOUT.flush; STDIN.gets.chomp %>
 [alias]
-	br = branch -a
-        sb = show-branch
+	br = branch
+  sb = show-branch
 	ci = commit
 	co = checkout
 	ls = ls-files
 	list = ls-files
 	st = status
-        lg = log  --pretty=format:'%Cred%h%Cgreen %ci%Creset %s'
+  lg = log  --pretty=format:'%Cred%h%Cgreen %ci%Creset %s'
 	diff = diff -w
 	dif = diff
 	pick = cherry-pick
-        headtag = describe --exact-match --tags HEAD
-        update-server = update-server-info
+  headtag = describe --exact-match --tags HEAD
+  update-server = update-server-info
 [color]
 	branch = auto
 	diff = auto
