Added git aliases

--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -2,6 +2,8 @@
 	name = <%= print("Your Name: "); STDOUT.flush; STDIN.gets.chomp %>
 	email = <%= print("Your Email: "); STDOUT.flush; STDIN.gets.chomp %>
 [alias]
+	h = help
+	r = remote
 	br = branch
   sb = show-branch
 	ci = commit
