Added gitconfig alias

--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -3,6 +3,8 @@
 	email = <%= print("Your Email: "); STDOUT.flush; STDIN.gets.chomp %>
 [alias]
 	h = help
+	remote = remote -v
+	remotes = remote
 	r = remote
 	br = branch
   sb = show-branch
