Add whitespace handling to gitignore

--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -48,6 +48,7 @@
 [core]
 	excludesfile = <%= ENV['HOME'] %>/.gitignore
 	autocrlf = input
+  whitespace = trailing-space,tab-in-indent
 [diff]
 	renames = true
 [apply]
