Enable git rerere

--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -58,3 +58,5 @@
 [github]
 	user = <%= print("GitHub Username: "); STDOUT.flush; STDIN.gets.chomp %>
 	token = <%= print("GitHub API Token: "); STDOUT.flush; STDIN.gets.chomp %>
+[rerere]
+  enabled = 1
